--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
@@ -41,9 +39,9 @@ android {
         }
     }
 
-    buildFeatures {
+    /*buildFeatures {
         viewBinding true
-    }
+    }*/
 }
 
 dependencies {
