--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
+    //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-ui:2.3.1'
 
 //    implementation "com.android.support:support-compat:25.4.0"
