--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,31 @@ android {
         }
     }
 
+//    signingConfig {
+//        config {
+//            storeFile file()        // 把加密文件放到你项目的根目录下
+//            storePassword '1234567' // 加密文件的密码
+//            keyAlias 'mali'         // 加密文件的别名
+//            keyPassword '1234567'   // 别名密码
+//        }
+//    }
+
+    signingConfigs {
+        configDebug {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile rootProject.file('app/debug.keystore')
+            storePassword 'android'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+//            signingConfig signingConfigs.config // 需要配置这行代码
+            signingConfig signingConfigs.configDebug
         }
     }
 
