--- a/local.properties
+++ b/local.properties
@@ -6,4 +6,5 @@
 # header note.
 #Tue Dec 08 19:05:50 CST 2020
 sdk.dir=/Users/habbyge/Library/Android/sdk
-ndk.dir=/Users/habbyge/Library/Android/sdk/ndk/21.2.6472646
+#ndk.dir=/Users/habbyge/Library/Android/sdk/ndk/22.0.7026061
+ndk.dir=/Users/habbyge/Library/Android/sdk/ndk/21.3.6528147
