--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,7 +10,11 @@ cmake_minimum_required(VERSION 3.10.2)
 project("iWatch")
 
 set(CMAKE_CXX_FLAGS "-std=c++11")
-set(SRC_LIST iwatch.cpp common/elfop.cpp)
+
+set(SRC_LIST iwatch.cpp
+             iwatch_impl.cpp
+             field_hook.cpp
+             common/elfop.cpp)
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -29,9 +33,9 @@ add_library(
 )
 
 include_directories(
-    common/log.h
-    common/elfop.h
-    art/art_method_11.h
+    common/*.h
+    art/*.h
+    iwatch_impl.h
 )
 
 # Searches for a specified prebuilt library and stores the path as a
