--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,15 @@ android {
 
         externalNativeBuild {
             cmake {
-                cppFlags '-std=c++11'
+                cppFlags "-std=c++11 -frtti -fexceptions"
+                arguments "-DANDROID_STL=c++_shared"
                 version '3.10.2'
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
+
+//            ndk{
+//                abiFilters "arm64-v8a", "armeabi-v7a"
+//            }
         }
     }
 
