--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
                 cppFlags "-std=c++11 -frtti -fexceptions"
                 arguments "-DANDROID_STL=c++_shared"
                 version '3.10.2'
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                // 生成多个版本的so文件
+//                abiFilters "armeabi-v7a", "arm64-v8a"
+//                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
             }
 
 //            ndk{
