--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:name=".IWatchApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -15,9 +15,10 @@
         <activity
             android:name=".test.MainActivity2"
             android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.IWatch.NoActionBar"></activity>
+            android:theme="@style/Theme.IWatch.NoActionBar">
+        </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".test.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
