--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ app/src/main/cpp/CMakeFiles/
 app/src/main/cpp/Makefile
 app/src/main/cpp/cmake_install.cmake
 app/.externalNativeBuild/
+app/src/main/libs/
