--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions"
                 // libc++ 的共享库为 libc++_shared.so, 静态库为 libc++_static.a
-                arguments "-DANDROID_STL=c++_shared"
+//                arguments "-DANDROID_STL=c++_shared"
                 // 生成多个版本的so文件
 //                abiFilters "armeabi-v7a", "arm64-v8a"
 //                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
